stage-03.py created

--- a/dvc.yaml
+++ b/dvc.yaml
@@ -11,4 +11,12 @@ stages:
     deps:
       - artifact01.txt
       - stage_02.py
+
+  stage_03:
+    cmd: python stage_03.py
+    deps:
+      - artifact01.txt
+      - stage_03.py
+    outs:
+      - artifact02.txt
   
